@@ -6,6 +6,7 @@ package io.airbyte.integrations.destination.e2e_test;
 
 import static org.mockito.Mockito.mock;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.collect.ImmutableMap;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.integrations.base.AirbyteMessageConsumer;
@@ -13,12 +14,12 @@ import io.airbyte.protocol.models.v0.AirbyteMessage;
 import io.airbyte.protocol.models.v0.AirbyteMessage.Type;
 import io.airbyte.protocol.models.v0.AirbyteRecordMessage;
 import java.time.Instant;
-import java.util.Map;
+import java.util.Collections;
 import java.util.function.Consumer;
 import org.junit.jupiter.api.Test;
 
 /**
- * This source is designed to be a switch statement for our suite of highly-specific test sourcess.
+ * This source is designed to be a switch statement for our suite of highly-specific test sources.
  */
 public class ThrottledDestinationTest {
 
@@ -26,8 +27,11 @@ public class ThrottledDestinationTest {
   @Test
   void test() throws Exception {
     final Consumer<AirbyteMessage> outputRecordCollector = mock(Consumer.class);
-    final AirbyteMessageConsumer consumer = new ThrottledDestination()
-        .getConsumer(Jsons.jsonNode(Map.of("millis_per_record", 10)), null, outputRecordCollector);
+
+    final JsonNode config = Jsons.jsonNode(
+        Collections.singletonMap("test_destination", Collections.singletonMap("millis_per_record", 10)));
+
+    final AirbyteMessageConsumer consumer = new ThrottledDestination().getConsumer(config, null, outputRecordCollector);
 
     consumer.accept(getAnotherRecord());
     consumer.accept(getAnotherRecord());
